# StreamlitDRV

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml
report/: report.tex
src/: __init__.py  config.py  data_handler.py  metrics.py  parameter_optimization.py  reduction_methods.py  visualizations.py
